@@ -1,5 +1,13 @@
 2002-01-17  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 02866]
+	* search.c: #include <signal.h>
+	* search.c (open_migemo): ignore SIG_INT for migemo process
+	* search.c (open_migemo): close_tty()
+	* search.c (open_migemo): use execl() instead of system()
+	
+2002-01-17  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 02865]
 	* search.c (open_migemo): add flush_tty()
 
@@ -2090,4 +2098,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.237 2002/01/17 09:26:33 ukai Exp $
+$Id: ChangeLog,v 1.238 2002/01/17 10:29:14 ukai Exp $
